style: fix oval design overflowing view width

--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -39,6 +39,6 @@
 
 .root-container img {
   position: absolute;
-  right: -25.15em;
+  right: -16.35em;
   bottom: 0.9em;
 }
